# engine/src/main/kotlin/cz/solvina/options/adapters/inbound/api/UniverseApiImpl.kt
@@ -54,6 +54,7 @@ class UniverseApiImpl(
             symbol = symbol.value,
             enabled = enabled,
             flagEnabled = flagEnabled,
+            sector = sector,
             ivRankThreshold = ivRankThreshold,
             minDte = minDte,
             maxDte = maxDte,
@@ -75,6 +76,7 @@ class UniverseApiImpl(
             symbol = Symbol(symbolOverride),
             enabled = enabled,
             flagEnabled = flagEnabled ?: false,
+            sector = sector,
             ivRankThreshold = ivRankThreshold,
             minDte = minDte,
             maxDte = maxDte,
